# rust-axum-api

./: .env.example  Cargo.toml  README.md
migrations/: 20230406062313_create_todos.up.sql
src/: main.rs
src/domain/model/: todo.rs
src/infrastructure/: mod.rs
src/infrastructure/request/: create_todo.rs
src/presentation/: mod.rs  todos_controller.rs
